Bugfix for chat - own name was aligned left instead of right

--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -31,8 +31,8 @@ table.chat-table {
 }
 
 .speakingturn.mine {
-	/* float: right; */
-	text-align: right;
+	float: right;
+	/* text-align: right; */
 }
 
 .speakingturn img.avatar {
