--- a/client/css/tagchat.css
+++ b/client/css/tagchat.css
@@ -30,8 +30,8 @@ table.chat-table {
 }
 
 .speakingturn.mine {
-	/* float: right; */
-	text-align: right;
+	float: right;
+	/* text-align: right; */
 }
 
 .speakingturn img.avatar {
